modify the start method